applications/gateway-routes/manifests/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: caliban-gateway
      namespace: istio-ingress
  hostnames:
    - argocd.tail4dd976.ts.net
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
