applications/gateway-routes/manifests/monitoring-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: caliban-gateway
      namespace: istio-ingress
  hostnames:
    - grafana.tail4dd976.ts.net
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: caliban-gateway
      namespace: istio-ingress
  hostnames:
    - prometheus.tail4dd976.ts.net
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: caliban-gateway
      namespace: istio-ingress
  hostnames:
    - alertmanager.tail4dd976.ts.net
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
